# ShopWayBot

./: .gitignore  README.md  config.py  constants.py  main.py  messages.py  pyproject.toml
database/core/: database.py  initial_tables.py
database/crud/: purchase.py  user.py
database/models/: purchase.py  user.py
database/schemas/: purchase.py  user.py
handlers/: user_commands.py  user_messages.py
handlers/utils/: calc.py
keyboards/: reply.py
src/log/: logging.py
src/parse/: pairs.py
states/: calc.py  item.py  link.py
